--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<p style="color: green"><%= notice %></p>
+
 <div class="container">
 
   <%= render @post %>
@@ -10,3 +10,13 @@
     <%= button_to "Destroy this post", @post, method: :delete %>
   </div>
 </div>
+
+<div class="container">
+		<h2 class="subtitle is-5"><strong><%= @post.comments.count %></strong> Comments</h2>
+		<%= render @post.comments %>
+		<div class="comment-form">
+			<hr />
+			<h3 class="subtitle is-3">Leave a reply</h3>
+	 		<%= render 'comments/form' %>
+		</div>
+	</div>
