--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -30,9 +30,9 @@
   </div>
 
   <div>
-    <%= form.label :rating, style: "display: block" %>
-    <%= form.text_field :rating %>
-  </div>
+  <%= form.label :rating, style: "display: none" %>
+  <%= form.hidden_field :rating %>
+</div>
 
   <div>
     <%= form.submit %>
