--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<p style="color: green"><%= notice %></p>
+
 <div class="container">
 
   <%= render @post %>
@@ -7,6 +7,13 @@
     <%= link_to "Edit this post", edit_post_path(@post) %> |
     <%= link_to "Back to posts", posts_path %>
 
-    <%= button_to "Destroy this post", @post, method: :delete %>
+    <%= button_to "Destroy this post", @post, method: :delete, data: { confirm: "Are you sure you want to delete this post?" } %>
   </div>
+</div>
+
+<div class="container">
+  <%= render 'comments/form' , post: @post %>
+  <% @comments.each do |comment|%>
+      <%= render 'comments/comment' , post: @post, comment: comment %>
+  <%end%>
 </div>
