--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,8 @@
-<%= form_with(model: [post, post.comments.build]) do |form| %>
+<%= form_with(model: [post, comment]) do |form| %>
   <div class="form-control">
     <%= form.text_field :name, placeholder: "Your Name" %>
     <%= form.text_field :email, placeholder: "Your Email" %>
     <%= form.text_area :content, placeholder: "Your Comment" %>
-    <%= form.submit "Submit", class: "btn btn-primary mt-2" %>
+    <%= form.submit submit_label, class: "btn btn-primary mt-2" %>
   </div>
 <% end %>
