--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,12 +7,13 @@
     <%= link_to "Edit this post", edit_post_path(@post) %> |
     <%= link_to "Back to posts", posts_path %>
 
-    <%= button_to "Destroy this post", @post, method: :delete, data: { confirm: "Are you sure you want to delete this post?" } %>
+    <%= button_to "Destroy this post", @post, method: :delete, data: { turbo_confirm: "Are you sure you want to delete this post?" } %>
+
   </div>
 </div>
 
 <div class="container">
-  <%= render 'comments/form' , post: @post %>
+  <%= render 'comments/form' , post: @post, comment: @post.comments.build, submit_label: "Reply" %>
   <% @comments.each do |comment|%>
       <%= render 'comments/comment' , post: @post, comment: comment %>
   <%end%>
