--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,15 @@
 <%= form_with(model: [post, comment]) do |form| %>
   <div class="form-control">
-    <%= form.text_field :name, placeholder: "Your Name" %>
-    <%= form.text_field :email, placeholder: "Your Email" %>
-    <%= form.text_area :content, placeholder: "Your Comment" %>
-    <%= form.submit submit_label, class: "btn btn-primary mt-2" %>
+    Name: <%= form.text_field :name, placeholder: "Your Name" %>
+    Email: <%= form.text_field :email, placeholder: "Your Email" %>
+    <div class="container">
+      Your Comment:
+          <div class="container">
+               <%= form.text_area :content, placeholder: "Your Comment", rows: 4, cols: 40 %>
+          </div>
+            <%= form.submit submit_label, class: "btn btn-primary mt-2" %>
+    </div>
+    
+
   </div>
 <% end %>
