--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,10 +5,23 @@
 
   <div>
     <%= link_to "Edit this post", edit_post_path(@post) %> |
-    <%= link_to "Rate this post", edit_post_path(@post) %> |
-    <%= link_to "Back to posts", posts_path %>
+    <%= link_to "Back to posts", posts_path %> |
+    <%= button_to "Destroy this post", @post, method: :delete, data: { turbo_confirm: "Are you sure you want to delete this post?" } %> 
+    <br>
 
-    <%= button_to "Destroy this post", @post, method: :delete, data: { turbo_confirm: "Are you sure you want to delete this post?" } %>
+            <%= form_for @post, url: rate_post_path(@post), method: :put do |f| %>
+              <div class="field">
+                <%= f.label :rating %>
+                <%= f.number_field :rating, min: 1, max: 5 %>
+                <%= f.submit "Rate" %>
+              </div>
+
+            <% end %>
+
+     <br>
+    
+
+    
 
   </div>
 </div>
