--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <div class="comment-<%= comment.id %> container" style="border: 1px solid black; padding: 1em; margin: 1em;">
   <p><strong>Name:</strong> <%= comment.email %></p>
   <% if (comment.updated_at - comment.created_at) > 1 %>
-    <p><span>Edited <%= time_ago_in_words(comment.updated_at) %> ago</span></p>
+    <p><span>Edited <%= comment.updated_at %></span></p>
   <% else %>
     <p><span>Posted: <%= comment.created_at.strftime('%B %e, %Y at %l:%M %p') %></span></p>
   <% end %>
@@ -16,8 +16,9 @@
         } %>
     </div>
     <div class="container">
-      <%= button_to "Delete", [post, comment], { class: "btn btn-danger", method: :delete } %>
+      <%= button_to "Delete", [post, comment], { class: "btn btn-danger", method: :delete,data: { turbo_confirm: "Are you sure you want to delete this comment?" } } %>
     </div>
+
   </div>
   <div id="edit-form-<%= comment.id %>" class="d-none">
     <%= render 'comments/form', post: @post, comment: comment, submit_label: "Update" %>
