--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -30,8 +30,8 @@
   </div>
 
   <div>
-  <%= form.label :rating, style: "display: block" %>
-  <%= form.number_field :rating %>
+  <%= form.label :rating, style: "display: none" %>
+  <%= form.number_field :rating, style: "display: none" %>
 </div>
 
   <div>
